--- a/index.html
+++ b/index.html
@@ -3,12 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Link de bootstrap-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <title>Document</title>
 </head>
 <body>
 
     <header>
-        <h1>Mi proyecto</h1>
+        <nav class="navbar bg-body-tertiary">
+            <div class="container-fluid">
+              <a class="navbar-brand"></a>
+              <form class="d-flex" role="search">
+                <input class="form-control me-2" type="search" placeholder="Buscar Producto" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Buscar</button>
+              </form>
+            </div>
+          </nav>
     </header>
     <main>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam et magni eum corrupti eius distinctio, vero nobis rem autem beatae laboriosam dolor ipsam omnis. Ullam quam assumenda autem saepe vel quasi et similique, consequuntur itaque harum. Quaerat deleniti laborum nihil nisi dignissimos officiis eligendi aliquid temporibus accusamus maiores natus voluptas voluptatem minima, sunt obcaecati ullam quibusdam delectus distinctio voluptates. Dolor necessitatibus placeat totam maxime. Veritatis neque obcaecati, pariatur magni illum sed quas similique, mollitia molestiae minima, eveniet ullam suscipit quod sit ipsum dolore iusto eos fugit eius laudantium distinctio eaque soluta tempore quibusdam. Dolores, porro aut consequuntur, vel, odit totam aperiam neque mollitia itaque ipsum non culpa commodi doloremque numquam? Ea quibusdam, accusamus soluta molestiae nihil eaque alias nemo? Cupiditate inventore harum fugiat incidunt ratione exercitationem dolores officiis, officia fuga, omnis earum itaque quisquam corporis laboriosam error quis facere, iusto tenetur? Est in quod nesciunt earum ratione cumque explicabo amet aspernatur error labore perspiciatis corrupti consequatur quam, alias veritatis perferendis voluptate dolorum a mollitia exercitationem pariatur vero tenetur ex veniam? Cupiditate architecto enim a eaque sapiente sed animi repellat facilis, cumque quae ipsum eius quasi, explicabo incidunt atque voluptatum necessitatibus voluptatem. Ipsum necessitatibus magnam laboriosam dolorem quos, voluptate quia quo porro dolorum tempora </p>
